<resources>
    <string name="app_name">DSA Elements Summons</string>
    <string name="menu_settings">Settings</string>
    <string name="str_CreateCharacter">Create character</string>
    <string name="str_EditCharacter">Edit character</string>
    <string name="str_SummonElemental">Summon elemental</string>
    <string name="img_ElementCircle">Circle of elements</string>
    <string name="str_CreateCharHead">Character creation:</string>
    <string name="str_TextCharacterName">Character name:</string>
    <string name="str_ClassesPrompt">Choose the class:</string>
    <string-array name="str_ClassesArray">
        <item>Mage</item>
        <item>Druid</item>
        <item>Geode</item>
        <item>Cristalomant</item>
        <item>Shaman</item>
    </string-array>
    <string name="str_TextCharacterClass">Character class:</string>
    <string name="str_Attributes">Attributes:</string>
    <string name="str_StatCourage">Courage:</string>
    <string name="str_StatWisdom">Wisdom:</string>
    <string name="str_StatCharisma">Charisma:</string>
    <string name="str_StatIntuition">Intuition:</string>
    <string name="str_Talents">Talents</string>
    <string name="str_TalentCallElementalServant">Call elemental servant:</string>
    <string name="str_TalentCallDjinn">Call djinn:</string>
    <string name="str_TalentCallMasterOfElement">Call master of element:</string>
    <string name="str_TalentedFor">Talented for</string>
    <string name="str_Element">Element</string>
    <string name="str_Summoning">Summoning:</string>
    <string name="str_ElementFire">Element fire</string>
    <string name="str_ElementWater">Element water</string>
    <string name="str_ElementLife">Element life</string>
    <string name="str_ElementStone">Element stone</string>
    <string name="str_ElementIce">Element ice</string>
    <string name="str_ElementAir">Element air</string>
    <string name="str_KnowledgeOfAttribute">Knowledge of attribute</string>
    <string name="str_TalentedDemonic">No. of demonic talents:</string>
    <string name="str_KnowledgeDemonic">No. of demonic knowledges:</string>
    <string name="str_SpecialCharacteristics">Special characteristics</string>
    <string name="str_AffinityToElementals">Affinity to elementals</string>
    <string name="str_DemonicCovenant">Demonic covenant</string>
    <string name="str_CloakedAura">Cloaked aura</string>
    <string name="str_WeakPresence">Weak presence</string>
    <string-array name="str_WeakPresenceArray">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="str_StrengthOfStigma">Strength of stigma</string>
    <string-array name="str_StrengthOfStigmaArray">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="str_SaveChar">Save character</string>
    <string name="str_DeleteChar">Delete character</string>
    <string name="title_activity_summoning">SummoningActivity</string>
    <string name="str_ElementalServant">Elemental servant</string>
    <string name="str_Djinn">Djinn</string>
    <string name="str_MasterOfElement">Master of element</string>
    <string name="str_ElementsPrompt">Choose an element</string>
    <string name="str_SelectSummoning">Select summoning type:</string>
    <string name="str_ElementDD">Element:</string>
    <string name="str_QualityOfMaterial">Quality of material:</string>
    <string name="str_Equipment">Equipment:</string>
    <string name="str_EquipmentMage1">White summoning robe (-1)</string>
    <string name="str_EquipmentMage2">Barefoot (-1)</string>
    <string name="str_EquipmentDruid1">Naked (-1)</string>
    <string name="str_EquipmentDruid2">Ritual cleansing (-1)</string>
    <string name="str_EquipmentCristalomant1">First potent cristal (-1)</string>
    <string name="str_EquipmentCristalomant2">Second potent cristal (-1)</string>
    <string name="str_EquipmentShaman1">First Equipment (-1)</string>
    <string name="str_EquipmentShaman2">Second Equipment (-1)</string>
    <string name="str_ErrorCharName">You need to enter a character name!</string>
    <string-array name="str_ElementsArray">
        <item>Fire</item>
        <item>Water</item>
        <item>Life</item>
        <item>Ice</item>
        <item>Stone</item>
        <item>Air</item>
    </string-array>
    <string name="str_QualityOfTrueName">Quality of true name:</string>
    <string-array name="str_QualityOfTrueNameArray">
        <item>no true name (0/0)</item>
        <item>Quality 1 (rough thesis-sketch) (-1/0)</item>
        <item>Quality 2 (-2/-1)</item>
        <item>Quality 3 (-3/-1)</item>
        <item>Quality 4 (-4/-1)</item>
        <item>Quality 5 (-5/-2)</item>
        <item>Quality 6 (-6/-2)</item>
        <item>Quality 7 (complete "Submatrix") (-7/-2)</item>
    </string-array>
    <string name="str_CircumstancesOfThePlace">Circumstances of place:</string>
    <string-array name="str_CircumstancesOfThePlaceArray">
        <item>elemental citadel of used element (-7/-2)</item>
        <item>near the elemental citadel (-6/-2)</item>
        <item>grand sanctuary (f.e. valley of elements) (-5/-2)</item>
        <item>important ritual space(f.e. Drakonia) (-4/-1)</item>
        <item>place of elemental purity(f.e. Schlund) (-3/-1)</item>
        <item>potent elemental location (-2/-1)</item>
        <item>element predominantly (-1/0)</item>
        <item>culturally-used place (+1/0)</item>
        <item>another element predominantly (+2/+1)</item>
        <item>complete absence of the element (+3/+1)</item>
        <item>contaminated site (+4/+1)</item>
        <item>large demonic sanctuary (+5/+2)</item>
        <item>gate of horror (+6/+2)</item>
        <item>gate of horror (Agrimoth) (+7/+2)</item>
    </string-array>
    <string name="str_Powernode">Strength of Powernode (with Powerlinemagic I)</string>
    <string-array name="str_PowernodeArray">
        <item>PS 0-1 (0)</item>
        <item>PS 2-5 (-1)</item>
        <item>PS 6-9 (-2)</item>
        <item>PS 10-13 (-3)</item>
        <item>PS 14-17 (-4)</item>
        <item>PS 18-21 (-5)</item>
        <item>PS 22-25 (-6)</item>
        <item>PS 26-29 (-7)</item>
        <item>PS 30-33 (-8)</item>
        <item>PS 34-37 (-9)</item>
    </string-array>
    <string name="str_PowerlinemagicI">Powerlinemagic I</string>
    <string name="str_CircumstancesOfTime">Circumstances of time</string>
    <string-array name="str_CircumstancesOfTimeArray">
        <item>1 on D20 (-3/-1)</item>
        <item>2–3 on D20 (-2/-1)</item>
        <item>4–5 on D20 (-1/0)</item>
        <item>6–15 on D20(0/0)</item>
        <item>16–17 on D20 (+1/0)</item>
        <item>18–19 on D20 (+2/+1)</item>
        <item>20 on D20 (or nameless days) (+3/+1)</item>
    </string-array>
    <string name="str_QualityOfGift">Quality of gift</string>
    <string-array name="str_QualityOfGiftArray">
        <item>(-7/-2)</item>
        <item>(-6/-2)</item>
        <item>(-5/-1)</item>
        <item>(-4/-1)</item>
        <item>(-3/-1)</item>
        <item>(-2/-1)</item>
        <item>(-1/0)</item>
        <item>(0/0)</item>
        <item>(+1/0)</item>
        <item>(+2/+1)</item>
        <item>(+3/+1)</item>
        <item>(+4/+1)</item>
        <item>(+5/+1)</item>
        <item>(+6/+2)</item>
        <item>(+7/+2)</item>
    </string-array>
    <string name="str_QualityOfDeed">Quality of deed</string>
    <string-array name="str_QualityOfDeedArray">
        <item>(-7/-2)</item>
        <item>(-6/-2)</item>
        <item>(-5/-1)</item>
        <item>(-4/-1)</item>
        <item>(-3/-1)</item>
        <item>(-2/-1)</item>
        <item>(-1/0)</item>
        <item>(0/0)</item>
        <item>(+1/0)</item>
        <item>(+2/+1)</item>
        <item>(+3/+1)</item>
        <item>(+4/+1)</item>
        <item>(+5/+1)</item>
        <item>(+6/+2)</item>
        <item>(+7/+2)</item>
    </string-array>
    <string-array name="str_ElementalPurityFireArray">
        <item>very precious: iron foundry,dragonfire(-6)</item>
        <item>precious: lava, volcano embers(-4)</item>
        <item>concentrated: forge fire(-2)</item>
        <item>pure: camp fire,oven(0)</item>
        <item>impaired:candle flame(+2)</item>
        <item>ignoble: Khôm heat(+4)</item>
        <item>particularly ignoble: \'cold\' light(+6)</item>
    </string-array>
    <string-array name="str_ElementalPurityWaterArray">
        <item>very precious: pure water(citadel)(-6)</item>
        <item>precious: deep sea water, Efferd sanctuary(-4)</item>
        <item>concentrated: fresh spring water, mountain lake(-2)</item>
        <item>pure: seawater, lake, river(0)</item>
        <item>impaired: rainwawter,used water(+2)</item>
        <item>ignoble: brackish water, swampwater(+4)</item>
        <item>particularly ignoble: air moisture, drain water(+6)</item>
    </string-array>
    <string-array name="str_ElementalPurityLifeArray">
        <item>very precious: very rare plant/animal(-6)</item>
        <item>precious: (-4)</item>
        <item>concentrated: (-2)</item>
        <item>pure: (0)</item>
        <item>impaired: (+2)</item>
        <item>ignoble: (+4)</item>
        <item>particularly ignoble: (+6)</item>
    </string-array>
    <string-array name="str_ElementalPurityIceArray">
        <item>very precious: deep abyssial frost(-6)</item>
        <item>precious: (-4)</item>
        <item>concentrated: (-2)</item>
        <item>pure: (0)</item>
        <item>impaired: (+2)</item>
        <item>ignoble: (+4)</item>
        <item>particularly ignoble: (+6)</item>
    </string-array>
    <string-array name="str_ElementalPurityStoneArray">
        <item>very precious: gemstones, dwarven gold(-6)</item>
        <item>precious: (-4)</item>
        <item>concentrated: (-2)</item>
        <item>pure: (0)</item>
        <item>impaired: (+2)</item>
        <item>ignoble: (+4)</item>
        <item>particularly ignoble: (+6)</item>
    </string-array>
    <string-array name="str_ElementalPurityAirArray">
        <item>very precious: pure air(citadel)(-6)</item>
        <item>precious: (-4)</item>
        <item>concentrated: (-2)</item>
        <item>pure: (0)</item>
        <item>impaired: (+2)</item>
        <item>ignoble: (+4)</item>
        <item>particularly ignoble: (+6)</item>
    </string-array>
	<string name="str_AstralSense">Astral sense</string>
	<string name="str_LongArm">Long arm</string>
	<string name="str_LifeSense">Life sense</string>
	<string name="str_Regeneration">Regeneration</string>
	<string name="str_AdditionalActions">Additional actions</string>
	<string name="str_Nope">No</string>
	<string name="str_RomanOne">I</string>
	<string name="str_RomanTwo">II</string>
	<string name="str_ResistanceAgainstTrait">Resistance against trait</string>
	<string name="str_ImmunityAgainstTrait">Immunity against trait</string>
	<string name="str_ResistanceAgainst">Resistance against</string>
	<string name="str_ImmunityAgainst">Immunity against</string>
	<string name="str_Damage">Damage</string>
	<string name="str_ResistanceAgainstElementalAttacks">Resistance against elemental attacks</string>
	<string name="str_ImmunityAgainstElementalAttacks">Immunity against elemental attacks</string>
	<string name="str_Fire">Fire</string>
	<string name="str_Water">Water</string>
	<string name="str_Life">Life</string>
	<string name="str_Ice">Ice</string>
	<string name="str_Stone">Stone</string>
	<string name="str_Air">Air</string>
	<string name="str_ResistanceAgainstDemonic">Resistance against demonic</string>
	<string name="str_ImmunityAgainstDemonic">Immunity against demonic</string>
</resources>